# voiceFlowPOC

./: .WORK_SESSION.md  .dockerignore  .env  .env.example  .gitignore  ANALISIS_ARQUITECTONICO_COMPLETO.md.obsoleto  AZURE_SETUP_GUIDE.md  COMMIT_3_VERIFICATION_GUIDE.md  CONTEXTO_SESION_COMPLETO.md  CURRENT_STATUS.md  DEMO_UI_PROPOSAL.md  DEVELOPMENT.md  Dockerfile  HANDOVER.md  HISTORIAL_COMANDOS_DETALLADO.md.obsoleto  INFORME_FINAL_ARQUITECTONICO.md  INTEGRATION_COMPLETE.md  LIMPIEZA_COMPLETADA.md.obsoleto  ORGANIZACION_DOCUMENTACION.md  PROJECT_COMPLETION.md  PROPUESTA_REFACTORING_ARQUITECTONICO.md  QUICK_START.md  README.md  azureConnectionTest.py  azure_test.py  azure_test2.py  convert_audio.py  create_audio_guide.py  create_test_audio.py  diagnose.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  generate_pdf_analysis.py.obsoleto  integration_demo.py  integration_validation.py  langchain_agents.py  main.py  production_test.py  pyproject.toml  (+16 more)
.github/workflows/: ci.yml
application/: __init__.py
application/api/: __init__.py
application/models/: requests.py  responses.py
application/orchestration/: __init__.py  backend_adapter.py  response_transformer.py
application/services/: __init__.py  audio_service.py  conversation_service.py  profile_service.py
business/: __init__.py
docker/: README.md
documentation/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_MULTIAGENT.md  ARCHITECTURE_VOICE-FLOW-POC.md  AUDIT_ARQUITECTONICO_PRODUCCION.md  AZURE_SETUP_GUIDE.md  DEVELOPMENT.md  DOCUMENTATION_CONSOLIDATED.md  ESTADO_ACTUAL_SISTEMA.md  FINAL_CONSOLIDATED_SYSTEM.md  HANDOVER.md  INDEX.md  PLAN_FASES_ACCESSIBILITY_GOOGLE_OVERPASS.md  PLAN_FASES_PLACESSEARCHTOOL_PRODUCCION.md  PLAN_IMPLEMENTACION_NLU_5_COMMITS.md  PLAN_NLU_V2_MEJORADO.md  PLAN_NLU_V3_FINAL.md  PROJECT_ANALYSIS_EXECUTIVE_SUMMARY.md  PROPOSAL_FASE_2B.md  QUICK_START.md  README_OLD.md  REFACTOR_PLAN_PROFILE_DRIVEN_RESPONSES.md  ROADMAP.md  SECRETS_MANAGEMENT.md  SPECS_USER_LOCATION.md  TESTING_SYSTEM_README.md  TRANSLATION_SUMMARY.md  advanced_llm_nlu_guide.md
ejemplos/: README.md
integration/: __init__.py
presentation/: __init__.py  fastapi_factory.py  server_launcher.py
scripts/: lint.sh
shared/: __init__.py
src/: __init__.py  factory.py  voiceflow_stt_agent.py
test_results_old/: test_results_test_20251129_122643.json  test_results_test_20251129_123133.json
tests/: conftest.py
web_ui/: app.py  requirements-ui.txt
(+168 files in other folders)
